# reciplease

./: .gitignore  Dockerfile  Procfile  README.md  pyproject.toml
backend/: Dockerfile  README.md
backend/src/reciplease/: conversion.py  main.py  schemas.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/reciplease/: README.md  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: BarkdownEditor.vue
src/getmdr/: conversion.py  main.py  schemas.py  scraping.py
src/reciplease/: conversion.py  main.py  scraping.py
